Fix: add aling-items property to radio contianer items and change the gap proprty for tablet devices

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -44,6 +44,7 @@
 /*Checkbox element custom properties */
 .form_wrapper > div:nth-child(5) {
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
@@ -183,5 +184,6 @@ input:hover {
   .radio_label {
     display: flex;
     align-items: center;
+    gap: 0.75em;
   }
 }
